# Ollama-Fastapi-chatbot

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yml  logger.py  main.py  readme  requirements.txt
backend/: .dockerignore  .env.example  Dockerfile  Modelfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py
backend/app/api/routes/: chat.py  health.py  models.py
backend/app/core/: config.py  logging.py
backend/app/db/: sessions.py
backend/app/schemas/: chat.py
backend/app/services/: ollama.py
backend/ollama/: Dockerfile  pull-models.sh
frontend/: .env.example  Dockerfile  nginx.conf  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/api/: client.ts
frontend/src/components/: ChatContainer.tsx  ChatInput.tsx  ChatMessage.tsx  CodeBlock.tsx  Header.tsx  LoadingIndicator.tsx  ModelSelector.tsx  Sidebar.tsx  SuggestionBlock.tsx
frontend/src/data/: suggestionBlocks.tsx
frontend/src/hooks/: useChat.ts
frontend/src/types/: index.ts
